--- a/app/app.scss
+++ b/app/app.scss
@@ -1,11 +1,1 @@
-.container {
-    max-width: 700px;
-    margin: 0 auto;
-    background: lightblue;
-    text-align: center;
-    h1 {
-        width: 100%;
-        text-align: center;
-        color: green;
-    }
-}
+@import "./assets/styles/main.scss";
