mergin js components and handlebars

--- a/app/components/card/card.hbs
+++ b/app/components/card/card.hbs
@@ -1,4 +1,4 @@
 <div class="card" data-action="card">
-    <p class="info">this is the card 1</p>
+    <p class="info">{{ parameter }}</p>
     <a href="#" class="alert" data-action="cta">readme!</a>
 </div>
