--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -14,3 +14,9 @@
     display: flex;
     justify-content: space-between;
 }
+.logo {
+    text-align: center;
+    img {
+        max-width: 200px;
+    }
+}
